samples/_failures_safe/1761691848_d3dcbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17ee2d7e.c: In function ‘main’:
./samples/SAFE/__tmp_17ee2d7e.c:129:12: error: missing terminating " character
  129 |     printf("Enter input to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_17ee2d7e.c:129:5: error: expected expression at end of input
  129 |     printf("Enter input to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_17ee2d7e.c:129:5: error: expected declaration or statement at end of input
